@@ -2989,8 +2989,11 @@ void TestDocks::tst_preventClose()
     fw->close();
     QVERIFY(dock1->isVisible());
 
-    dock1->deleteLater();
-    QVERIFY(Testing::waitForDeleted(dock1));
+    // Put into a main window
+    auto m = createMainWindow();
+    m->addDockWidget(dock1, KDDockWidgets::Location_OnRight);
+    m->close();
+    QVERIFY(dock1->isVisible());
 }
 
 void TestDocks::tst_propagateMinSize()
