@@ -6,6 +6,7 @@
  - Added Config::setDropIndicatorAllowedFunc() and corresponding example
    (kddockwidgets_example --hide-certain-docking-indicators)
  - Fixed case where unfloating wouldn't restore to the main window (#44 and #96)
+ - Fixed MainWindow not propagating close events to docked widgets
 
 * v1.5.1 (unreleased)
  - X11: Improved detecting which window is under the cursor, by using native X11 API
